From Demo To MyDev/sample/retrieveSource/objects/Visit__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Организация</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Визиты</relationshipLabel>
        <relationshipName>Visit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Комментарий</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Контакт</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Визиты</relationshipLabel>
        <relationshipName>Visit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FactStartDateTime__c</fullName>
        <label>Факт. начало визита</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinishDateTimeFact__c</fullName>
        <label>Факт. окончание визита</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinishDateTime__c</fullName>
        <label>Окончание визита</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartDateTime__c</fullName>
        <label>Начало визита</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Статус</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Еще не запланирован</fullName>
                </value>
                <value>
                    <fullName>Запланирован</fullName>
                </value>
                <value>
                    <fullName>Отправлен</fullName>
                </value>
                <value>
                    <fullName>Выполняется</fullName>
                </value>
                <value>
                    <fullName>Завершен</fullName>
                </value>
                <value>
                    <fullName>Отменен</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Тема</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Визит</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>StartDateTime__c</columns>
        <columns>Contact__c</columns>
        <columns>Subject__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VIZ-{0000000}</displayFormat>
        <label>Визит</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Визиты</pluralLabel>
    <recordTypes>
        <fullName>ClientVisit</fullName>
        <active>true</active>
        <label>Визит к клиенту</label>
    </recordTypes>
    <recordTypes>
        <fullName>JointVisit</fullName>
        <active>true</active>
        <label>Совместный визит</label>
    </recordTypes>
    <recordTypes>
        <fullName>PartnerVisit</fullName>
        <active>true</active>
        <label>Визит к партнеру</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <label>Обучение агента</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>